Add AppProperties, idempotency & UI features
Introduce centralized application configuration and fail-protection, add idempotency support, and expand backend & frontend features.

Backend: add AppProperties (pagination, shift, warehouse, status transitions, fail-protection) and JacksonConfig; enable scheduling in main application; add IdempotencyFilter/IdempotencyService and register the filter in SecurityConfig; relax ActivityLogController auth to allow additional roles; add controllers/services/repositories/mappers/entities/DTOs/enums for cities, timezones, vehicle brands/models, and many other domain pieces; add ReportCsvExportHelper, QueryParameterNormalizer, ShiftLifecycleScheduler and other service implementations and definitions. Also adjust various repositories, mappers, DTOs and exception handling.

Frontend: add idempotency client and API params, appConfig and operation guards; add many UI components/pages/hooks for cities, timezones, inventory, stock movements, search-selects, reports, notifications, tables, filter panel and prevent-double-submit helper; update routes, topbar and other shared components.

Misc: update maven wrapper distribution URL and wrapperUrl to use 3.9.11, and numerous small updates across backend/frontend to wire the new configuration and features.